@@ -16,6 +16,9 @@ details about the organization of the company&rsquo;s Exchange servers.
 #E2kContext, #E2kGlobalCatalog
 </para>
 
+<!-- ##### SECTION Stability_Level ##### -->
+
+
 <!-- ##### STRUCT E2kAutoconfig ##### -->
 <para>
 The <structfield>version</structfield>,
@@ -33,9 +36,21 @@ e2k_autoconfig_check_global_catalog().
 describing the account configuration.
 </para>
 
+@owa_uri: 
+@gc_server: 
+@username: 
+@password: 
 @gal_limit: 
 @version: 
+@display_name: 
+@email: 
+@account_uri: 
+@exchange_server: 
 @timezone: 
+@nt_domain: 
+@w2k_domain: 
+@home_uri: 
+@exchange_dn: 
 @pf_server: 
 @auth_pref: 
 @require_ntlm: 
