@@ -19,23 +19,16 @@ The <link linkend="ximian-connector-E2kContextPrivate">private
 E2kContext API</link>.
 </para>
 
+<!-- ##### SECTION Stability_Level ##### -->
+
+
 <!-- ##### STRUCT E2kContext ##### -->
 <para>
 #E2kContext manages the pool of WebDAV connections to the Exchange server.
 </para>
 
-
-<!-- ##### SIGNAL E2kContext::redirect ##### -->
-<para>
-Indicates that @e2kcontext has processed a redirection response. The
-application can use this to update its records so that the correct URI
-can be used automatically in the future.
-</para>
-
-@e2kcontext: the object which received the signal.
-@arg1: the HTTP status code
-@arg2: the originally-requested URI
-@arg3: the URI @old_uri was redirected to
+@parent: 
+@priv: 
 
 <!-- ##### FUNCTION e2k_context_new ##### -->
 <para>
