@@ -14,6 +14,9 @@ Data-encoding utility functions
 
 </para>
 
+<!-- ##### SECTION Stability_Level ##### -->
+
+
 <!-- ##### FUNCTION e2k_base64_encode ##### -->
 <para>
 
