@@ -14,6 +14,9 @@ This code is not currently used.
 
 </para>
 
+<!-- ##### SECTION Stability_Level ##### -->
+
+
 <!-- ##### STRUCT E2kFreebusy ##### -->
 <para>
 A structure representing a user's free/busy data.
