@@ -14,6 +14,9 @@ HTTP utility functions
 
 </para>
 
+<!-- ##### SECTION Stability_Level ##### -->
+
+
 <!-- ##### TYPEDEF E2kHTTPStatus ##### -->
 <para>
 This represents a libsoup or HTTP status code
