@@ -14,6 +14,18 @@ WebDAV properties
 
 </para>
 
+<!-- ##### SECTION Stability_Level ##### -->
+
+
+<!-- ##### TYPEDEF E2kProperties ##### -->
+<para>
+An #E2kProperties structure represents a set of WebDAV properties;
+either properties that are currently on an object, or a set of
+properties the caller wishes to add to / modify on / delete from an
+object.
+</para>
+
+
 <!-- ##### FUNCTION e2k_properties_new ##### -->
 <para>
 
