@@ -14,6 +14,9 @@ E2kRestriction (vaporware)
 
 </para>
 
+<!-- ##### SECTION Stability_Level ##### -->
+
+
 <!-- ##### ENUM E2kRestrictionType ##### -->
 <para>
 This indicates the type of restriction. See the descriptions of the
