@@ -14,6 +14,9 @@ Search criteria
 
 </para>
 
+<!-- ##### SECTION Stability_Level ##### -->
+
+
 <!-- ##### STRUCT E2kRestriction ##### -->
 <para>
 This represents a MAPI <structname>SRestriction</structname> structure.
