@@ -14,6 +14,9 @@ These are the #E2kOperation methods used internally by #E2kContext.
 #E2kResult, #E2kContext
 </para>
 
+<!-- ##### SECTION Stability_Level ##### -->
+
+
 <!-- ##### FUNCTION e2k_results_array_new ##### -->
 <para>
 
