@@ -14,6 +14,9 @@ WebDAV Multi-Status results
 
 </para>
 
+<!-- ##### SECTION Stability_Level ##### -->
+
+
 <!-- ##### STRUCT E2kResult ##### -->
 <para>
 This contains the information from a single
@@ -32,6 +35,13 @@ Multi-Status response.
 
 @results: 
 @nresults: 
+
+
+<!-- ##### TYPEDEF E2kResultIter ##### -->
+<para>
+An opaque structure used to iterate through the results of a
+Multi-Status WebDAV method.
+</para>
 
 
 <!-- ##### FUNCTION e2k_result_iter_next ##### -->
