@@ -19,6 +19,9 @@ information in this file about how server-side rules work is wrong.
 #E2kRestriction, #E2kAction
 </para>
 
+<!-- ##### SECTION Stability_Level ##### -->
+
+
 <!-- ##### STRUCT E2kRule ##### -->
 <para>
 A single server-side rule.
