@@ -35,11 +35,16 @@ parent in order to be able to access the object.
 #E2kSid
 </para>
 
+<!-- ##### SECTION Stability_Level ##### -->
+
+
 <!-- ##### STRUCT E2kSecurityDescriptor ##### -->
 <para>
 This represents a Windows <structname>SECURITY_DESCRIPTOR</structname>
 </para>
 
+@parent: 
+@priv: 
 
 <!-- ##### FUNCTION e2k_security_descriptor_new ##### -->
 <para>
