@@ -29,6 +29,9 @@ associated with a user.
 e2k_global_catalog_lookup(), #E2kSecurityDescriptor
 </para>
 
+<!-- ##### SECTION Stability_Level ##### -->
+
+
 <!-- ##### STRUCT E2kSid ##### -->
 <para>
 This corresponds to a Windows <structname>SID</structname>, as defined
