@@ -14,6 +14,9 @@ URI utility routines
 
 </para>
 
+<!-- ##### SECTION Stability_Level ##### -->
+
+
 <!-- ##### STRUCT E2kUri ##### -->
 <para>
 A URI.
