@@ -15,6 +15,9 @@ addressbook's "selectnames" interface.
 
 </para>
 
+<!-- ##### SECTION Stability_Level ##### -->
+
+
 <!-- ##### STRUCT E2kUserDialog ##### -->
 <para>
 The dialog widget.
