@@ -14,6 +14,9 @@ Random utility functions
 
 </para>
 
+<!-- ##### SECTION Stability_Level ##### -->
+
+
 <!-- ##### FUNCTION e2k_parse_timestamp ##### -->
 <para>
 
