@@ -14,6 +14,9 @@ XML utility functions
 
 </para>
 
+<!-- ##### SECTION Stability_Level ##### -->
+
+
 <!-- ##### FUNCTION e2k_parse_xml ##### -->
 <para>
 
