@@ -14,6 +14,9 @@ MAPI and CDO constants
 
 </para>
 
+<!-- ##### SECTION Stability_Level ##### -->
+
+
 <!-- ##### ENUM MapiAccess ##### -->
 <para>
 These are the bits in a folder's %PR_ACCESS property.
