@@ -1,28 +1,16 @@
-<!-- ##### TYPEDEF E2kProperties ##### -->
+<!-- ##### SECTION ./tmpl/ximian-connector-unused.sgml:Stability_Level ##### -->
+
+
+
+<!-- ##### SIGNAL E2kContext::redirect ##### -->
 <para>
-An #E2kProperties structure represents a set of WebDAV properties;
-either properties that are currently on an object, or a set of
-properties the caller wishes to add to / modify on / delete from an
-object.
+Indicates that @e2kcontext has processed a redirection response. The
+application can use this to update its records so that the correct URI
+can be used automatically in the future.
 </para>
 
-
-<!-- ##### TYPEDEF E2kResultIter ##### -->
-<para>
-An opaque structure used to iterate through the results of a
-Multi-Status WebDAV method.
-</para>
-
-
-<!-- ##### SECTION Stability_Level ##### -->
-
-
-
-<!-- ##### TYPEDEF XNTLM_DES_KS ##### -->
-<para>
-This represents a DES key schedule. After initializing it with
-xntlm_deskey(), you can then pass it to xntlm_des() as many time as
-you need.
-</para>
-
+@e2kcontext: the object which received the signal.
+@arg1: the HTTP status code
+@arg2: the originally-requested URI
+@arg3: the URI @old_uri was redirected to
 
