@@ -14,6 +14,9 @@ These functions are the main interface to the xntlm library.
 
 </para>
 
+<!-- ##### SECTION Stability_Level ##### -->
+
+
 <!-- ##### FUNCTION xntlm_negotiate ##### -->
 <para>
 
