@@ -1,3 +1,8 @@
+2005-07-13  Sarfraaz Ahmed <asarfraaz@novell.com>
+
+	* storage/exchange-account.h : No longer is needed here. Moved to e-d-s
+	Also updated the docs after the new tarball release.
+
 2005-07-11  Sarfraaz Ahmed <asarfraaz@novell.com>
 
 	* storage/exchange-component.c : Removed the references to xc-backend
